@@ -22,7 +22,7 @@
 ?>
 <?php
 
-$gallery->version = '1.6-RC1-svn-b2';
+$gallery->version = '1.6-RC1-svn-b3';
 $gallery->config_version = 100;
 $gallery->album_version = 39;
 $gallery->user_version = 6;
