@@ -1,3 +1,13 @@
+2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b3
+
+ * Fix: When an absolute url is given makeFormIntro, also use unhtmlentities
+
+ * Fix: Remove whitespace in comment textarea.
+
+ * Change: Nicer output of formatted_filesize()
+
+ * Fix: Valid HTML in imagemap.php
+ 
 2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b2
 
  * Change: Little installer enhancements.
